Projet/cloud-car-rental/cars-service/cars-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cars-deployment
  labels:
    app: cars-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cars-service
  template:
    metadata:
      labels:
        app: cars-service
    spec:
      containers:
        - name: cars-container
          image: hocinebour/cars-service:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
