Projet/cloud-car-rental/cars-service/cars-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cars-service
  labels:
    app: cars-service
spec:
  type: NodePort
  selector:
    app: cars-service
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30080
