Projet/cloud-car-rental/cars-service/cars-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cars-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cars-service
                port:
                  number: 3000
